--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -148,10 +148,15 @@ jobs:
           base_image: raspios_lite_arm64:latest
           copy_artifact_path: /tmp/output/*
           copy_artifact_dest: /tmp/output/
-          image_additional_mb: 8192
+          image_additional_mb: 16384
           commands: |
+            # core stuff
             apt update && apt -y upgrade
             curl -sSL https://get.docker.com | sh
+
+            # qemu for docker
+            apt install qemu binfmt-support qemu-user-static
+            docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
