--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -153,10 +153,8 @@ jobs:
             # core stuff
             apt update && apt -y upgrade
             curl -sSL https://get.docker.com | sh
-
-            # qemu for docker
-            apt install qemu binfmt-support qemu-user-static
-            docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+            docker --version
+            file $(which docker)
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
