--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -155,6 +155,7 @@ jobs:
             docker --version
             file $(which docker)
             service docker start
+            service docker status
 
             docker build --platform linux/armhf -t aarch64_32:latest -f ./Dockerfile.armv7l .
 
