--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -154,8 +154,9 @@ jobs:
             curl -sSL https://get.docker.com | sh
             docker --version
             file $(which docker)
-            service docker start
+            service docker restart
             service docker status
+            stat /var/run/docker.sock
 
             docker build --platform linux/armhf -t aarch64_32:latest -f ./Dockerfile.armv7l .
 
