--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -153,6 +153,7 @@ jobs:
           commands: |
             apt update && apt -y upgrade
             curl -sSL https://get.docker.com | sh
+            update-alternatives --set iptables /usr/sbin/iptables-legacy
             docker --version
             file $(which docker)
             dockerd
