--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -150,11 +150,10 @@ jobs:
           copy_artifact_dest: /tmp/output/
           image_additional_mb: 16384
           use_systemd_nspawn: yes
+          systemd_nspawn_options: "-b"
           commands: |
             apt update && apt -y upgrade
             curl -sSL https://get.docker.com | sh
-            update-alternatives --set iptables /usr/sbin/iptables-legacy
-            modprobe iptable_nat
             docker --version
             file $(which docker)
             dockerd
