--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -138,15 +138,18 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Create output dir
+      - name: Pre-pull Docker container
         run: |
+          docker pull ghcr.io/bjia56/armv7l-wheel-builder:main
+          docker save -o builder.tar ghcr.io/bjia56/armv7l-wheel-builder:main
           mkdir -p /tmp/output/
 
       - name: Run build
-        uses: bjia56/raspberry-pi-runner@7c5ba2e00f1270577446dfc86f29a8ee4d105a5b
+        uses: bjia56/raspberry-pi-runner@e0be57670912f808bf148ef7caf8979011e2a780
         with:
           prerun_copy_from: ./*
           commands: |
+            docker load -i builder.tar
             docker build --platform linux/armhf -t aarch64_32:latest -f ./Dockerfile.armv7l .
 
       - name: Upload Artifacts
