--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os_version: [ 10.15, 11, 12 ]
+        os_version: [ 10.15, 11, 12, 13 ]
         python3_version: [ 7, 8, 9, 10, 11 ]
         arch_cibw_go:
           - [ "x86_64", "amd64" ]
@@ -42,7 +42,7 @@ jobs:
       - name: install goimports
         run: go install golang.org/x/tools/cmd/goimports@latest
 
-      - name: install python 3.${{ matrix.python3_version }} 
+      - name: install python 3.${{ matrix.python3_version }}
         run: |
           brew install python@3.${{ matrix.python3_version }}
           ln -s /usr/local/opt/python@3.${{ matrix.python3_version }}/bin/python3.${{ matrix.python3_version }}  /usr/local/bin/python_for_build
@@ -61,7 +61,7 @@ jobs:
             PATH=$PATH:/usr/local/go/bin
             GOARCH=${{ matrix.arch_cibw_go[1] }}
             CGO_ENABLED=1
-          
+
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
         with:
