--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -203,3 +203,15 @@ jobs:
         with:
           name: wheels
           path: ./wheelhouse/*.whl
+
+  all_builds_passed:
+    needs:
+    - build_macos
+    - build_linux_x86_64
+    - build_linux_arm64
+    - build_linux_armv7l
+    - build_windows
+    runs-on: ubuntu-latest
+    steps:
+    - run: |
+        echo "All builds passed!"
