--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -15,7 +15,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os_version: [ 11, 12, 13 ]
+        os_version: [ 13 ]
         python3_version: [ 7, 8, 9, 10, 11 ]
         arch_cibw_go:
           - [ "x86_64", "amd64" ]
@@ -57,6 +57,7 @@ jobs:
             PATH=$PATH:/usr/local/go/bin
             GOARCH=${{ matrix.arch_cibw_go[1] }}
             CGO_ENABLED=1
+            MACOSX_DEPLOYMENT_TARGET=10.15
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
@@ -65,7 +66,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_linux_x86_64:
-    #if: false
+    if: false
     name: Linux cp37,cp38,cp39,cp310,cp311 x86_64
     runs-on: ubuntu-20.04
 
@@ -94,7 +95,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_linux_arm64:
-    #if: false
+    if: false
     name: Linux cp37,cp38,cp39,cp310,cp311 arm64
     runs-on: ubuntu-20.04
 
@@ -126,7 +127,7 @@ jobs:
           path: ./wheelhouse/*.whl
 
   build_linux_armv7l:
-    #if: false
+    if: false
     name: Linux cp37,cp38,cp39,cp310,cp311 armv7l
     runs-on: ubuntu-latest
 
@@ -164,7 +165,7 @@ jobs:
           path: /tmp/output/*.whl
 
   build_windows:
-    #if: false
+    if: false
     name: Windows cp37,cp38,cp39,cp310,cp311 x86_64
     runs-on: windows-2019
 
@@ -203,3 +204,16 @@ jobs:
         with:
           name: wheels
           path: ./wheelhouse/*.whl
+
+  all_builds_passed:
+    if: false
+    needs:
+    - build_macos
+    - build_linux_x86_64
+    - build_linux_arm64
+    - build_linux_armv7l
+    - build_windows
+    runs-on: ubuntu-latest
+    steps:
+    - run: |
+        echo "All builds passed!"
