--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -3,9 +3,9 @@ name: Build
 on:
   push:
     branches: ["master"]
-    paths-ignore: ["pypi/**", "scripts/generate_pypi_links.py", "scripts/build_local.sh"]
+    paths: ["scrypted_arlo_go/**"]
   pull_request:
-    paths-ignore: ["pypi/**", "scripts/generate_pypi_links.py", "scripts/build_local.sh"]
+    paths: ["scrypted_arlo_go/**"]
   workflow_dispatch:
 
 jobs:
@@ -34,7 +34,8 @@ jobs:
         run: go install golang.org/x/tools/cmd/goimports@latest
 
       - name: build wheels
-        run: ./scripts/macos_build_wheels.sh
+        run: ./builder/macos_build_wheels.sh
+        working-directory: ./scrypted_arlo_go
         env:
           CIBW_ARCHS: ${{ matrix.arch_cibw_go[0] }}
           PYTHON_BINARY_PATH: /usr/local/bin/python_for_build
@@ -46,6 +47,7 @@ jobs:
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
+        working-directory: ./scrypted_arlo_go
         with:
           name: wheels
           path: ./wheelhouse/*.whl
@@ -60,6 +62,7 @@ jobs:
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
+        working-directory: ./scrypted_arlo_go
         env:
           CIBW_BUILD: "cp3*_x86_64"
           CIBW_SKIP: "cp36-* *-musllinux_x86_64"
@@ -75,6 +78,7 @@ jobs:
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
+        working-directory: ./scrypted_arlo_go
         with:
           name: wheels
           path: ./wheelhouse/*.whl
@@ -92,6 +96,7 @@ jobs:
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
+        working-directory: ./scrypted_arlo_go
         env:
           CIBW_BUILD: "cp3*_aarch64"
           CIBW_SKIP: "cp36-* *-musllinux_aarch64"
@@ -107,6 +112,7 @@ jobs:
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
+        working-directory: ./scrypted_arlo_go
         with:
           name: wheels
           path: ./wheelhouse/*.whl
@@ -128,9 +134,10 @@ jobs:
 
       - name: Build wheels via Docker
         uses: docker/build-push-action@v3
+        working-directory: ./scrypted_arlo_go
         with:
           context: .
-          file: ./Dockerfile.armv7l
+          file: ./builder/Dockerfile.armv7l
           push: false
           platforms: linux/armhf
           tags: armv7l:latest
@@ -176,6 +183,7 @@ jobs:
 
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.11.2
+        working-directory: ./scrypted_arlo_go
         env:
           CIBW_BUILD: "cp3*"
           CIBW_SKIP: "cp36-*"
@@ -186,6 +194,7 @@ jobs:
 
       - name: Upload Artifacts
         uses: actions/upload-artifact@v3
+        working-directory: ./scrypted_arlo_go
         with:
           name: wheels
           path: ./wheelhouse/*.whl
