--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -3,9 +3,9 @@ name: Build
 on:
   push:
     branches: ["master"]
-    paths: ["scrypted_arlo_go/**"]
+    paths: ["scrypted_arlo_go/**", ".github/workflows/build_wheel.yml"]
   pull_request:
-    paths: ["scrypted_arlo_go/**"]
+    paths: ["scrypted_arlo_go/**", ".github/workflows/build_wheel.yml"]
   workflow_dispatch:
 
 jobs:
