--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -55,3 +55,24 @@ jobs:
           files: /tmp/wheelhouse/*.whl
           tag_name: ${{ inputs.version }}
           body: ${{ inputs.description }}
+
+  update-pypi:
+    if: ${{ inputs.create-release }}
+    needs: release
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with:
+          python-version: '3.9'
+
+      - name: Update PyPI
+        run: python ./scripts/generate_pypi_links.py ${{ inputs.version }}
+
+      - name: Commit and push
+        uses: stefanzweifel/git-auto-commit-action@v4
