parallelize linux qemu builds

--- a/scrypted_arlo_go/builder/Dockerfile.armv7l
+++ b/scrypted_arlo_go/builder/Dockerfile.armv7l
@@ -1,4 +1,5 @@
 FROM ghcr.io/bjia56/armv7l-wheel-builder:main
+ARG PYTHON3_VERSION=9
 
 RUN go install github.com/go-python/gopy@v0.4.5 && \
     go install golang.org/x/tools/cmd/goimports@latest
@@ -7,11 +8,7 @@ RUN mkdir build
 WORKDIR build
 COPY . .
 
-RUN ./builder/armv7l_build_wheels.sh
+RUN ./builder/armv7l_build_wheels.sh ${PYTHON3_VERSION}
 
 RUN mkdir /export && \
-    cp build3.7/wheelhouse/*.whl /export && \
-    cp build3.8/wheelhouse/*.whl /export && \
-    cp build3.9/wheelhouse/*.whl /export && \
-    cp build3.10/wheelhouse/*.whl /export && \
-    cp build3.11/wheelhouse/*.whl /export
+    cp build3.${PYTHON3_VERSION}/wheelhouse/*.whl /export
