--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -86,6 +86,10 @@ jobs:
     #if: false
     name: Linux arm64
     runs-on: ubuntu-20.04
+    strategy:
+      fail-fast: false
+      matrix:
+        python3_version: [ 7, 8, 9, 10, 11 ]
 
     steps:
       - uses: actions/checkout@v3
@@ -93,12 +97,12 @@ jobs:
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
 
-      - name: Build wheels
+      - name: Build 3.${{ matrix.python3_version }} wheels
         uses: pypa/cibuildwheel@v2.11.2
         with:
           package-dir: ./scrypted_arlo_go
         env:
-          CIBW_BUILD: "cp3*_aarch64"
+          CIBW_BUILD: "cp3${{ matrix.python3_version }}*_aarch64"
           CIBW_SKIP: "cp36-* *-musllinux_aarch64"
           CIBW_ARCHS: "aarch64"
           CIBW_ENVIRONMENT: >
@@ -120,6 +124,10 @@ jobs:
     #if: false
     name: Linux armv7l
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python3_version: [ 7, 8, 9, 10, 11 ]
 
     steps:
       - name: Checkout repository
@@ -131,16 +139,16 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
 
-      - name: Build wheels via Docker
+      - name: Build 3.${{ matrix.python3_version }} wheels via Docker
         uses: docker/build-push-action@v3
         with:
           context: ./scrypted_arlo_go
           file: ./scrypted_arlo_go/builder/Dockerfile.armv7l
+          build-args: |
+            PYTHON3_VERSION=${{ matrix.python3_version }}
           push: false
           platforms: linux/armhf
           tags: armv7l:latest
-          cache-from: type=gha
-          cache-to: type=gha,mode=min
           load: true
 
       - name: Extract output
