--- a/.github/workflows/check_hosts.yml
+++ b/.github/workflows/check_hosts.yml
@@ -34,4 +34,10 @@ jobs:
 
       - name: Run checker
         run: |
-          docker run auth_hosts:latest
+          docker run auth_hosts:latest > /tmp/report.json
+
+      - name: Upload Artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          name: report
+          path: /tmp/report.json
