--- a/.github/workflows/build_wheel.yml
+++ b/.github/workflows/build_wheel.yml
@@ -60,7 +60,7 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.11.2
+        uses: pypa/cibuildwheel@v2.16.2
         with:
           package-dir: ./scrypted_arlo_go
         env:
@@ -89,7 +89,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python3_version: [ 7, 8, 9, 10, 11 ]
+        python3_version: [ 7, 8, 9, 10, 11, 12 ]
 
     steps:
       - uses: actions/checkout@v3
@@ -98,7 +98,7 @@ jobs:
         uses: docker/setup-qemu-action@v2
 
       - name: Build 3.${{ matrix.python3_version }} wheels
-        uses: pypa/cibuildwheel@v2.11.2
+        uses: pypa/cibuildwheel@v2.16.2
         with:
           package-dir: ./scrypted_arlo_go
         env:
@@ -127,7 +127,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python3_version: [ 7, 8, 9, 10, 11 ]
+        python3_version: [ 7, 8, 9, 10, 11, 12 ]
 
     steps:
       - name: Checkout repository
@@ -188,7 +188,7 @@ jobs:
         run: go install golang.org/x/tools/cmd/goimports@latest
 
       - name: Build wheels
-        uses: pypa/cibuildwheel@v2.11.2
+        uses: pypa/cibuildwheel@v2.16.2
         with:
           package-dir: ./scrypted_arlo_go
         env:
