--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -28,7 +28,7 @@ jobs:
     steps:
       - name: Print input arguments
         run: echo "${{ toJSON(github.event.inputs) }}"
-        
+
       - uses: mukunku/tag-exists-action@v1.2.0
         id: check-tag
         with:
@@ -51,10 +51,11 @@ jobs:
       contents: write
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@v3
+        uses: actions/download-artifact@v4
         with:
-          name: wheels
+          pattern: wheels-*
           path: /tmp/wheelhouse/
+          merge-multiple: true
 
       - name: Release
         uses: softprops/action-gh-release@v1
